--- a/interfaces/paciente_view.ui
+++ b/interfaces/paciente_view.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>988</width>
-    <height>718</height>
+    <width>1001</width>
+    <height>851</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -279,7 +279,7 @@ QRadioButton{
                </layout>
               </item>
               <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_3">
+               <layout class="QHBoxLayout" name="horizontalLayout_2">
                 <item>
                  <widget class="QPushButton" name="bt_act">
                   <property name="minimumSize">
@@ -352,6 +352,53 @@ QRadioButton{
                   <property name="icon">
                    <iconset>
                     <normaloff>ELEMENTOS GRAFICOS/save.png</normaloff>ELEMENTOS GRAFICOS/save.png</iconset>
+                  </property>
+                  <property name="iconSize">
+                   <size>
+                    <width>30</width>
+                    <height>30</height>
+                   </size>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer_4">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="bt_import">
+                  <property name="minimumSize">
+                   <size>
+                    <width>200</width>
+                    <height>50</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>200</width>
+                    <height>50</height>
+                   </size>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <pointsize>9</pointsize>
+                   </font>
+                  </property>
+                  <property name="text">
+                   <string>Importar información</string>
+                  </property>
+                  <property name="icon">
+                   <iconset>
+                    <normaloff>ELEMENTOS GRAFICOS/registro.png</normaloff>ELEMENTOS GRAFICOS/registro.png</iconset>
                   </property>
                   <property name="iconSize">
                    <size>
@@ -519,7 +566,7 @@ QRadioButton{
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>988</width>
+     <width>1001</width>
      <height>21</height>
     </rect>
    </property>
